# cr8tor

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build-cr8tor-operator.yml  build-identity-operator.yml  build-vdi-controller.yml  crd-validation.yml  helm-release.yml  init_project.yml  orchestrator-linux.yml  orchestrator-windows.yml  release.yml  sync-metamodel.yml  trigger-crd-sync.yml
charts/cr8tor-operator/: .helmignore  Chart.yaml  README.md  values.yaml
charts/cr8tor-operator/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  rbac.yaml  serviceaccount.yaml
crds/: kustomization.yaml
crds/identity/: group-crd.yaml  keycloak-crd.yaml  kustomization.yaml  user-crd.yaml
crds/research/: kustomization.yaml  project-crd.yaml
crds/workspaces/: kustomization.yaml  vdiinstance-crd.yaml
docs/: index.md
docs/developer-guide/: extending-operator.md  operator-architecture.md
docs/operator-guide/: architecture.md  metamodel.md  overview.md
docs/user-guide/: create-new-dar-project.md
examples/linkml-project/: config.toml
manifests/cr8tor-operator/: configmaps.yaml  deployment-prod.yaml  deployment.yaml  keycloak-realm-config.yaml  kustomization.yaml  rbac.yaml  service-account.yaml
manifests/identity-operator/: deployment.yaml  kustomization.yaml  rbac.yaml  service-account.yaml
manifests/vdi-operator/: deployment.yaml  rbac.yaml  service-account.yaml
scripts/: generate-crds.py  setup-hooks.sh  test-system.py
src/cr8tor/: main.py
(+77 files in other folders)
